Added Auto complete on field Username on login screen.